--- a/src/main/resources/templates/sqli_mybatis_blind.html
+++ b/src/main/resources/templates/sqli_mybatis_blind.html
@@ -16,7 +16,7 @@
             },
             error: function (xhr, ajaxOptions, thrownError) {
             	$('#sqlTableVul tbody').empty();
-                $('#errorDiv').html(xhr.responseText);
+                // $('#errorDiv').html(xhr.responseText);
             },
             
             success: function (data) {
