--- a/src/main/resources/templates/xss_reflect.html
+++ b/src/main/resources/templates/xss_reflect.html
@@ -58,13 +58,13 @@ The Cookie field controlling user login authentication should set the HttpOnly a
 
                  <br><br>   
                  
-                 <span style = 'font-size:20px'>Please input your name: </span>     
-                 <input type = 'text' id = 'nameinput'/>        
+                 <span style = 'font-size:30px'>Please input your name: </span>     
+                 <input style = 'width: 320px' type = 'text' id = 'nameinput'/>        
                  <input type = 'button' value = 'submit' onclick = 'submitToBack()'/>
                  <br/><br/>
                  
-                 <div style= ' font-size:20px'>Your input is : </div>
-                 <div style= 'color:red; font-size:20px' id = 'myDiv'/></div>
+                 <div style= ' font-size:30px'>Your input is : </div>
+                 <div style= 'color:red; font-size:30px' id = 'myDiv'/></div>
                  
                 </div>
 
