--- a/src/main/resources/static/css/linearicons.css
+++ b/src/main/resources/static/css/linearicons.css
@@ -6,7 +6,7 @@
 		url('fonts/Linearicons-Free.woff?w118d') format('woff'),
 		url('fonts/Linearicons-Free.ttf?w118d') format('truetype'),
 		url('fonts/Linearicons-Free.svg?w118d#Linearicons-Free') format('svg');
-	font-weight: normal;
+	font-weight: Medium;
 	font-style: normal;
 }
 
@@ -14,7 +14,7 @@
 	font-family: 'Linearicons-Free';
 	speak: none;
 	font-style: normal;
-	font-weight: normal;
+	font-weight: Medium;
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
