--- a/src/main/resources/templates/sqli_mybatis_inband.html
+++ b/src/main/resources/templates/sqli_mybatis_inband.html
@@ -47,7 +47,7 @@
 
         <main role="main" class="col-md-10 ml-sm-auto pt-3 px-4">
             <div class="vul_header">
-                <span>SQL Injection - MyBatis</span>
+                <span>Inband SQL Injection</span>
             </div>
             <hr>
             <ul class="nav nav-tabs">
@@ -60,14 +60,14 @@
 
             <div class="tab-content">
                 <div class="tab-pane dec shadow-sm p-3 mb-4 rounded active" id="aa">                    
-SQL injection (SQLI) occurs when a program fails to properly check user input and incorporates it into an SQL statement by concatenation, leading to SQL injection. Attackers can directly access database information and cause information leakage through SQL injection. While the underlying MyBatis framework has implemented defenses against SQL injection, there still remains a risk of SQL injection when it is improperly used.
+In-band SQL injection is a type of SQL injection where the attacker receives the result as a direct response using the same communication channel. For example, if the attacker performs the attack manually using a web browser, the result of the attack will be displayed in the same web browser.
                 </div>               
             </div>
             <hr>
 
             <div class="box-float">
                 <div class="float1">                   
-                    <h5><span class="lnr lnr-bug"> Input movie name and click search</span></h5>
+                    <h5><span style = "font-size: 20px" > Input movie name and click search</span></h5>
                     <br/>
                    
                     <br/>
@@ -80,7 +80,7 @@ SQL injection (SQLI) occurs when a program fails to properly check user input an
                         </div>   
                         
                          <div class="form-group">
-                                    <table class="table table-striped table-bordered table-sm" id="sqlTableVul">
+                                    <table style="font-size: 20px" class="table table-striped table-bordered table-sm" id="sqlTableVul">
                                         <thead>
                                         <tr>
                                             <th>Id</th>
